--- a/src/app.css
+++ b/src/app.css
@@ -296,6 +296,11 @@ label {
 	.form-field.text {
 		flex-basis: 50%;
 	}
+	
+	.form-field.date {
+		flex-basis: 50%;
+	}
+
 	.form-field.select {
 		flex-grow: 0;
 		flex-basis: auto;
