--- a/src/app.css
+++ b/src/app.css
@@ -34,6 +34,7 @@ body {
 	--sucess-color: #0f9960;
 	--sucess-color-hover: #0d8050;
 	--sucess-color-active: #0a6640;
+	--succes-color-disabled: rgba(15, 153, 96, .5);
 	--sucess-color-contrast: #fff;
 	--warning-color: #d9822b;
 	--warning-color-hover: #bf7326;
@@ -42,6 +43,7 @@ body {
 	--danger-color: #db3737;
 	--danger-color-hover: #c23030;
 	--danger-color-active: #a82a2a;
+	--danger-color-disabled: rgba(219, 55, 55, 0.5);
 	--danger-color-contrast: #fff;
 	--bg-color: #fff;
 	--table-header-color: #f5f8fa;
@@ -49,7 +51,6 @@ body {
 	--minimal-color-active: rgba(138, 155, 168, 0.35);
 	color: var(--default-color-contrast);
 	background: #f9f6f1;
-	font-family: "Segoe UI", "Helvetica Neue", "Helvetica", "Lucida Grande", Arial, "Ubuntu", "Cantarell", "Fira Sans", sans-serif;
 	font-family: 'Roboto', sans-serif;
 	font-size: 14px;
 	line-height: 1.428571429;
@@ -271,6 +272,25 @@ label {
 	padding: 8px;
 }
 
+.form-group {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 8px;
+}
+
+.form-group > label {
+	font-size: 16px;
+	font-weight: bold;
+	color: black;
+	width: 100%;
+	padding-left: 8px;
+}
+
+.form-group > .separator {
+	width: 100%;
+}
+
+
 .form-field {
 	padding: 8px;
 	flex-grow: 1;
@@ -296,19 +316,16 @@ label {
 	.form-field.text {
 		flex-basis: 50%;
 	}
-	
 	.form-field.date {
 		flex-basis: 50%;
 	}
-
-	.form-field.select {
+	.form-field.select:not(.small) {
+		flex-basis: 50%;
+	}
+	.form-field.select.small {
 		flex-grow: 0;
 		flex-basis: auto;
 	}
-}
-
-.control-group:not(:first-child) {
-	margin-top: 24px;
 }
 
 .action-group {
@@ -341,8 +358,8 @@ label {
 }
 
 ::-webkit-scrollbar {
-    height: 18px;
-    width: 18px;
+	height: 18px;
+	width: 18px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
